@@ -5,30 +5,22 @@ AUX dahdi-autoconf.conf2 1067 SHA256 c364b784aa0e273165c3d4b989d8ccbd44ae97502e4
 AUX dahdi-autoconf.init2 5816 SHA256 6f24b33997a244ae9a705416456bc8a8e1e046e1927d619ccec91703e8f76433 SHA512 378fcc328f8facb018b0316fcf5bc38d2d0db73a0dea30cd397e2edaaf0bb9cc4797829bf158156e08039971d0b5eb7ef8060b33fe8f915b31eae6a9b55dd958 WHIRLPOOL 9a818c2c6b44bc1d4a6672386a1e09470a4fef1f1a1e6d1b44e62419168932c03e430f7a07106c4c970bf4a39af46d67c70d3c0a87095711a83cf6ca929859ac
 AUX dahdi-autoconf.init3 5833 SHA256 99790d2eb009ceff439e8e417f47efaf7e40915288c8de127cb7baba0dedea80 SHA512 c23c1790db2af03d7cee9364803c900c00c98cdc041bdc592a2224f8915a5cbf6b54ecf6d439ea9fba35632901dd8246e95602fca4f63dd55d5a1eca11c26517 WHIRLPOOL bfcac4ee2157b978ca68f0d293c4cc449532daa79482ca71309ea289275c407b597136e7de6b811d6fb65a966cda8eb061585481fa8ddda458455839ad90a845
 AUX dahdi.init2 696 SHA256 c06e70c1e53d9f9092ab853a6d0bf1efdfbeac73919c115499de32abc8202ca4 SHA512 9cfd269aec205a9b7a387814119b207522d36037f5f9c705a745c75047348aa21a47475bca612678123545487fcb96e761ef2432bd588453a9e6a6abea8a795b WHIRLPOOL 1d00e32afca1d32a3c1a57da2d021322dc44bc0bfec10bf72fff5b5cda78603168ded61a0eef398476136bc6925e92b4c849db7d69e7be33b2564d48ade832c5
+DIST dahdi-tools-2.10.0.tar.gz 655475 SHA256 fc70c4677cf251abaa16c74adb0f5ee13361be6b463b048f95cf061739f15bcd SHA512 cf84d1117ac6b4dbd87db4a6ec072e945e64677fbd5dca169e06d954c599ce4ff9a80254aa3027bcc02f7770a5e0a3bcaca075aacfd28c62870d011801d0d225 WHIRLPOOL 19ebf4ddf12e7267d5fe2f35bf43d4ae60fe7c9e69edd4991ad5bbce7a2af5b2dbf0f4e1dc4f8e078749f7b8c98b0c0b70a1cd61c844955cceacc24fd971ebe2
 DIST dahdi-tools-2.6.2.tar.gz 843572 SHA256 1c000b31acee6e26187b72800b38325bf419e8eb95063e24b327030f2e8d63c5 SHA512 3e0abb7cdfff072720bf48ccdb5cc43d183e0c3217b1eadfee7920f5b29cfe31f3b79d981516ae95232065c7686a87f169835802788cb1185c3c947feff275c3 WHIRLPOOL 47c381abdbe63224308cf315cee0dc4ee48f65538bbe4f42f5edd409683fc18b9e0c66ec1548b9d853681c45bd3559c1eb47ff6a0874d8699aabf0ae061a71ca
 DIST dahdi-tools-2.8.0.tar.gz 642755 SHA256 bcc8b1fd90a0230489a818a185fcbc3d22b8acbf5d94981501ffa5290981732b SHA512 983e1dfe9bda130c3d0e60f44a79ebb75ae8ab9f27bd77d0355c58e901012465a37411fb1cdc97a131ac01ac892f37729f5853439aaba4ba5a4927c7a7997f81 WHIRLPOOL 14fbf62685cc3a135c2455905a5167e340b6d56202a403510736f00686c3093acbca341f22f9f897004670d4c68132a3fc064cd64922a9bff30bb908f9c40f8e
 DIST dahdi-tools-2.9.0.1.tar.gz 649990 SHA256 023bb55905dc7bddb682773369e1abe21e8bc4f86f96d54e43462a12c9b6530c SHA512 2e16312d4f44aa50cbd7d843514aca06b8f1019b114a00ca5a76cf40ea9b8e937766e70c7628a76a991fa3ad8a12d36782c378a2ad783f9882f0225429794494 WHIRLPOOL 120cd5aff2347848f70c3f364e44f4e26a48d40632214c12861ce563c91b9254cca80d56b833900def2efbcf18f8cf9c4911e58a80b8771c61233cfebf6eb221
 DIST gentoo-dahdi-tools-patchset-0.3.tar.bz2 2250 SHA256 2fce2849d6746db1256ee824d974c74f571a2d70a11246c3301c0ade6de43974 SHA512 15bba73140ede20f49f69419d9ef9a4f242d18ad2da6edee6e91c44fad7ddaf5aa7d6d9e5127c0af0f384d81b4bc8c3fae9e5504d13279abb7ac3db2d01b6a43 WHIRLPOOL a4642ab37673f0470631c3c330b89449f823f270d7266adf0f4bc77366d3bed085969fbc30534c6742b48f8a7f901a7e749021a4a406d2073c83db7e469f06e2
 DIST gentoo-dahdi-tools-patchset-0.4.tar.bz2 2665 SHA256 71642a87e566220c7e7f908adb25dadcf87ff62a23150a6e6074708fd91297b1 SHA512 e48797bd5e741ba94bfd2b19c088ae51812272dc67e7fac04a0c52df9a8371443112d0385e31fe0b812acfc4c912c8cc38e9c632131d5ede55afc43301e2c2be WHIRLPOOL c4704d6ba82a6c020632380507d4435d0c2af4d9c61ed753957bb0ca8ce50ee955526d13497e34db2b4f61a4160db2bc51e5df82fc2f49bc88d857041669f82b
+EBUILD dahdi-tools-2.10.0.ebuild 1267 SHA256 246963e2e1f7f4ea32d03e21bb974e1794bbcf1af509d39c5d019167b3e985e4 SHA512 3dd03297c96d5e4006d1aef6359654e307bf8703f3866204ef196d948e38af496a757e8646c14a2b978ecfe1f10c4095cdcd920144498377b62b1f0f2cad6817 WHIRLPOOL 500b41e26ac6357c1b7c5b5e3aff44353a76a14f0a4cd91ddf1ffe3ea2c5e51e224b6abf9a5bf6c7bf275bedf8a1b4225663ba712efa1dc380b693b672f646da
 EBUILD dahdi-tools-2.6.2.ebuild 1263 SHA256 63fdfd7ef9f292a42beb4de504fda07c17c58a90cf6c7a6c2534a65e7d3460f0 SHA512 abacb03e6af5aed6bd1b3e9dacabf5fa5bbba5033e7040862adc4b345141ad5ff0e942e48a553cf29703d745fe83e1a8bc5f3ab4212877b05abfcfd0d7702aba WHIRLPOOL 1fc901c892fe2f5ab94b27035474fed8a0a0cf7e429d7ba8ba4b9c9684d87facf77d1025898dabe8bd13fc2f54c6c654af85f168e005b8b016a03225f34560bf
 EBUILD dahdi-tools-2.8.0.ebuild 1259 SHA256 be8724783b423a8ab7c890a8a013c2cf2a69cc8b0dd98200bb93d6cd94affbbd SHA512 d6c04356c4616a30f4f3ece6c215d49ef43a0d057afee382815469d7ff2e5a77fc6ddfdc38aac3ec07f8a341c71546d58103d3e00a7867bc42264b5c0085a6da WHIRLPOOL 035d261beaf440e470131748bcb609b0870990657a708c778bc376369fed96566876bf80c30690a80013436ba1404e7359f3643d147ef3c4caa18b0942564902
 EBUILD dahdi-tools-2.9.0.1.ebuild 1261 SHA256 1a53c9c234ece1e0bb5075fb6e8b18ee02434836967dd665bd5ac5c1e8e6d829 SHA512 b8b06fabc69048e8c946fe9073f410c58f69b4bb9a3a0c50cad05624f17a9a3a9271124479c1a60f3b6d9ead78928c1d83073a36bb3509349b4ae69fe0e39e68 WHIRLPOOL b435bbaee8d36f1daf0c86a86698d0f7b7658a606f8739493a461b0a3654bcbd771a8c873098965d32cb8f2e9b603322f19054e6af0d7be62da4a024a83fdcdb
-MISC ChangeLog 7158 SHA256 0bb8c619a573eb392fae1d4cdb83ae8a208eb46c7d04ac512923011102213ad1 SHA512 59cea81236cfa8bdcc382f9627af0761f9dc58604ca5e470622094a5ffc420c2e0139be2f38757198541f9af54f1150974b188b0e28b23fe9a25ad574e936dd9 WHIRLPOOL ce2ca7e1bf8f3b2cee3956300b3d3edfc553b65a08c8d890fcd7709cd1e505a346b9bde2c2426dca53b5ec5ee5dfe86ed6536a107118ed9edd7cc1191f086f3b
+MISC ChangeLog 7459 SHA256 7ccaa2f210f942af7f9dd806512cfeccc7b29dd504f39d1141ea9235bbcba70b SHA512 a1e830262e6b3e8b7d29d7379d067cdc8c8571aa23cf105e8be4c82a3581c47abf0a78f2f6dae14e7a3450f93036ced7ba8b7e64c8085d4bd8100105e5710605 WHIRLPOOL 2479be6ad281ce941728bdabfb99bbef9f78cb3a20743637d29a3da2127c3b44c102f165a3a3478ae66f0a690d8189b69a1117fd3072ea311391dc9e126d78c2
 MISC metadata.xml 311 SHA256 ad0791472f50bf9c48d762b653fa09d60f52647edaf61f59542a4d10833d9b96 SHA512 25665d3587818380bf2134e73b8293d160ffbfdb277924c856d6fd30d53a92f7d66487db37a4db0844f9062b3a9bd30a11a372bff0853119ede1a825b7557a51 WHIRLPOOL 805c3df70ccadc9882eb81346a41a5ab1a10ea5fb9bc21a75d73a69df4009ec4d0e75589ab42fccd5f623b33a214a8d67559dbb425680f1287695a3eda45d7cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT560qAAoJELp701BxlEWfDrMQALlGywlvnhchLA7KSn1u2jlE
-G7k9bCStoUV8YSxpGoIfVNiNUW6nbcwYAZC+kbIT/I3+hSUQayZuXuPhH7eMgtJB
-xuTmqOw2w+7D2MQocoomOqas0jxHwPKAzEgKbaJyEf4e5XuhrgzutKX6CQjbMKYW
-xj6Oh0J4qEdz/65XWIpDuNJdxDhCBTHPzuP2piBdL/DVWUjs80DPpcTUcCRzTUh8
-h/q0ALwq5vdhoLJCfyQRM25kz1w6CMISwM/dy9WHcBNQhuuIhr5NviXi8J/N3xGh
-Mib2gped55Gkj0kjy8xSmHeNlyTfVmDFZyxU9OVqGgVrgJtp6zUxfo2NmTV4XgZj
-Fzd/Xbohv9Itarf4eNwUMSNe6j3Pb5k7/3lrTvhjkNJdbBLx+e+Sb7tcfmh42/tX
-h1nEjxWY6Ij9i/wwrdHks4SHroKucZ8LYGSWREkMkCwLIOfJsdPOiTE5haWvbEyU
-b/SxzMhPnpL9i7n85m40ZdqbJb7A7vJ32MQuerU35eB8Q3RN92bwvzdH5GvdI+iW
-I4Jsc/TIGPhsmNadx5e7Awa4sTXl5VuGTXQVqOzp7umTmdJu1rqLxgBXS53uB0Fr
-E+hvjxRnJ26+StflOzO1sOC8Gq6eAsVsjrRjsWo7Ten++qCTBaehf3JFmsJ+OMAf
-klHJRaKi3j8b4sotmsYT
-=P0R9
+iEYEAREIAAYFAlPzCxkACgkQp5vW4rUFj5rVPgCfWiuHrY/WSQD7GozlJKOTOmjI
+9zkAoKvXvwYmVEGmBs1xH1TfmbdwJW1Y
+=bKt/
 -----END PGP SIGNATURE-----
